Implemented : 1. Refactored Security Filter chain to support (Dual Authentication model)oauth2 and custom endpoints 2. Implemented Application roles and themes for clients. 3. Added new endpoints for client configurations